--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -38,7 +38,7 @@
 
 
 	.my_Pills {
-		background-image: url("img/_bg_light.png");
+		background-image: url(../img/_bg_light.png);
 		padding-bottom: 100px;
 	}
 
@@ -131,7 +131,7 @@
 	}
 
 	strong {
-		color: rgb(226, 107, 23);
+		color: darkorange;
 	}
 
 	.captured {
@@ -148,7 +148,7 @@
 		margin-top: 50px;
 		margin-bottom: 50px;
 		width: 95%;
-		color: rgb(226, 107, 23);
+		color: #ff8c00;
 	}
 
 	.coin_sauron {
@@ -178,7 +178,7 @@
 
 	h3 {
 		font-size: 30px;
-		color: rgb(226, 107, 23);
+		color: #ff8c00;
 	}
 
 	a {
@@ -201,7 +201,7 @@
 	}
 
 	.ring_capa {
-		background-color: rgb(255, 95, 1);
+		background-color: #ff8c00;
 	}
 
 	thead {
@@ -218,7 +218,7 @@
 	}
 
 	.panel-info > .panel-heading {
-		background-color: rgb(255, 95, 1);
+		background-color: #ff8c00;
 	}
 
 	.panel-title {
@@ -244,7 +244,7 @@
 		font-size: 30px;
 		margin-top: 45px;
 		text-align: center;
-		color: rgb(255, 95, 1)
+		color: #ff8c00;
 	}
 
 	.btn-info {
@@ -264,11 +264,11 @@
 	}
 
 	.Footer {
-		background-color: rgb(255, 95, 1);
+		background-color: #ff8c00;
 		padding-top: 60px;
 		padding-bottom: 60px;
 	}
 
 	.list-group-item {
-		background-color: rgb(255, 95, 1);
+		background-color: #ff8c00;
 	}
